--- a/project-android/AndroidManifest.xml
+++ b/project-android/AndroidManifest.xml
@@ -29,6 +29,8 @@
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> 
 <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
     
     <application
         android:allowBackup="true"
@@ -44,6 +46,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name="org.teleal.cling.android.AndroidUpnpServiceImpl"/>
     </application>
 
 </manifest>
