--- a/project-android/AndroidManifest.xml
+++ b/project-android/AndroidManifest.xml
@@ -39,7 +39,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="de.dhbwStuttgart.anelPwrCtrl.LoadPhoneGapActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
