--- a/project-android/bin/dexedLibs/.gitignore
+++ b/project-android/bin/dexedLibs/.gitignore
@@ -1,3 +1,6 @@
 /android-support-v4-f17649098960ce365989e18c6b52d299.jar
 /annotations-a972e179ca4830ed7a80df4e81dbcd73.jar
 /cordova-2.3.0-ef408b6c9902cf4571f0294c07427b41.jar
+/teleal-common-1.0.13-b834135e5d1a46a96545a2d926cf6ff0.jar
+/cling-core-1.0.5-d5a8f8606594aaa3237a9cdaa0a1db54.jar
+/cling-support-1.0.5-5603be8e97b115ea8e540fe7a062d45f.jar
